# ml-audit-platform

./: .licensecheck.toml  AUDIT_REPORT.md  Dockerfile  GITHUB_SUMMARY.md  app.py  app.py~  audit-report.json  audit-report.txt  audit_dependencies.py  audit_report.json  dep-tree.txt  docker-compose.yml  generate_audit_report.py  generate_audit_report.py~  pyproject.toml  requirements.txt  requirements.txt~  save_model.py  sbom.json  sbom_report.json  train_model.py
.github/workflows/: 1-config-basic.yml  1-config-basic.yml~  2-config-advanced.yml  2-config-advanced.yml~  3-config-enterprise.yml  3-config-enterprise.yml~  4-config-merge-reports.yml  4-config-merge-reports.yml~  fail-case-vulnerable.yml  ml-pipeline.yml  ml-pipeline.yml~
docs/: audit_report.html
models/: metrics.json  model_info.json  titanic_model.pkl  titanic_scaler.pkl
