[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ml-audit-platform"
version = "1.0.0"
description = "ML Audit Platform - Titanic Survival Prediction with DevSecOps compliance"
authors = [
    {name = "Pavel Podrezov", email = "pavel.podrezov@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ml", "audit", "security", "devops", "titanic", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

[tool.poetry]
name = "ml-audit-platform"
version = "1.0.0"
description = "ML Audit Platform - Titanic Survival Prediction with DevSecOps compliance"
authors = ["Pavel Podrezov <pavel.podrezov@example.com>"]
readme = "README.md"
license = "MIT"

# Core ML and Data Science packages
# From requirements.txt - CORE ML PACKAGES
packages = [
    {include = "app"},
    {include = "models"},
]

[tool.poetry.dependencies]
python = "^3.11"

# ========== CORE ML PACKAGES ==========
fastapi = "^0.124.0"
scikit-learn = "^1.8.0"
pandas = "^2.3.0"
numpy = "^2.3.0"
scipy = "^1.16.0"
nltk = "^3.9.0"
joblib = "^1.5.0"

# ========== API/WEB FRAMEWORK ==========
uvicorn = "^0.30.0"
starlette = "^0.50.0"
pydantic = "^2.12.0"
pydantic-core = "^2.41.0"
typing-extensions = "^4.15.0"
annotated-types = "^0.7.0"

# ========== HTTP CLIENTS ==========
requests = "^2.32.0"
httpx = "^0.28.0"
certifi = "^2025.11.0"
charset-normalizer = "^3.4.0"
idna = "^3.11.0"
urllib3 = "^2.6.0"

# ========== SECURITY & CRYPTOGRAPHY ==========
cryptography = "^46.0.0"
cffi = "^2.0.0"
pycparser = "^2.23.0"

# ========== SERIALIZATION ==========
protobuf = "^6.33.0"
msgpack = "^1.1.0"

# ========== CONFIGURATION ==========
python-dotenv = "^1.0.0"
PyYAML = "^6.0.0"
Jinja2 = "^3.1.0"
MarkupSafe = "^3.0.0"
tomlkit = "^0.13.0"
tomli = "^2.3.0"

# ========== LOGGING & OUTPUT ==========
loguru = "^0.7.0"
rich = "^14.2.0"
Markdown = "^3.10.0"
Pygments = "^2.19.0"

# ========== UTILITIES ==========
click = "^8.3.0"
tqdm = "^4.67.0"
six = "^1.17.0"
appdirs = "^1.4.0"
tenacity = "^9.1.0"
marshmallow = "^4.1.0"
attrs = "^23.2.0"
anyio = "^4.12.0"
pytz = "^2025.2.0"
tzdata = "^2025.2.0"
python-dateutil = "^2.9.0"
python-slugify = "^8.0.0"
bleach = "^6.3.0"

# ========== DATA SCIENCE INTEGRATIONS ==========
kaggle = "^1.6.0"
kagglesdk = "^0.1.13"
requests-cache = "^1.2.0"

# ========== DEPENDENCY MANAGEMENT ==========
setuptools = "^80.9.0"
pip = "^25.3"
uv = "^0.9.0"

# ========== OTHER UTILITIES ==========
watchfiles = "^1.1.0"
websockets = "^15.0.0"
httptools = "^0.7.0"
uvloop = "^0.22.0"
python-multipart = "^0.0.20"
shellingham = "^1.5.0"
platformdirs = "^4.5.0"
filelock = "^3.20.0"

# ========== SBOM & CYCLONE DX ==========
cyclonedx-python-lib = "^11.6.0"
py-serializable = "^2.1.0"
license-expression = "^30.4.0"
boolean.py = "^5.0.0"
dparse = "^0.6.0"
safety-schemas = "^0.0.16"
defusedxml = "^0.7.0"
pyparsing = "^3.2.0"
sortedcontainers = "^2.4.0"
prettytable = "^3.17.0"
packaging = "^25.0.0"
regex = "^2025.11.0"
annotated-doc = "^0.0.4"
url-normalize = "^2.2.0"
CacheControl = "^0.14.0"
Authlib = "^1.6.0"

# ========== TYPE HINTS ==========
types-requests = "^2.32.4"
types-tqdm = "^4.67.0"
typing-inspection = "^0.4.0"
mypy-extensions = "^1.1.0"

# ========== PARSING & CONFIGURATION ==========
requirements-parser = "^0.13.0"
pip-requirements-parser = "^32.0.0"
pip-api = "^0.0.34"
"ruamel.yaml" = "^0.18.0"
iniconfig = "^2.3.0"
fhconfparser = "^2024.1.0"
toml = "^0.10.0"

# ========== MARKDOWN & TEXT ==========
markdown-it-py = "^4.0.0"
mdurl = "^0.1.0"

# ========== PACKAGE URL ==========
packageurl-python = "^0.17.0"

# ========== SERIALIZATION & PLUGINS ==========
pluggy = "^1.6.0"
pathspec = "^0.12.0"
wcwidth = "^0.2.0"
cattrs = "^24.1.0"

# ========== HTTP TOOLS ==========
httpcore = "^1.0.0"
h11 = "^0.14.0"

# ========== THREADING ==========
threadpoolctl = "^3.6.0"

[tool.poetry.group.dev.dependencies]
# ========== TESTING & LINTING ==========
pytest = "^8.3.0"
mypy = "^1.19.0"
black = "^25.12.0"
typer = "^0.20.0"

# ========== SECURITY AUDIT TOOLS ==========
pip-audit = "^2.10.0"
safety = "^3.7.0"
pip-licenses = "^5.5.0"
pipdeptree = "^2.30.0"
licensecheck = "^0.9.0"

[tool.poetry.scripts]
# CLI entry points (if needed)
train-model = "train_model:main"
save-model = "save_model:main"

[tool.poetry.urls]
Homepage = "https://github.com/pavelpodrezov1/ml-audit-platform"
Documentation = "https://github.com/pavelpodrezov1/ml-audit-platform#readme"
Repository = "https://github.com/pavelpodrezov1/ml-audit-platform.git"
Issues = "https://github.com/pavelpodrezov1/ml-audit-platform/issues"

# ========== TOOL CONFIGURATIONS ==========

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".tox", ".venv"]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",
    "missing-docstring",
]

[tool.pylint.format]
max-line-length = 100

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.poetry-version-plugin]
source = "tag"

